--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
    "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": [{ "enableDangerousAutofixThisMayCauseInfiniteLoops": true }]
   }
 }
