--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
    "rules": {
-    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/rules-of-hooks": [{ "enableDangerousAutofixThisMayCauseInfiniteLoops": true }],
     "react-hooks/exhaustive-deps": [{ "enableDangerousAutofixThisMayCauseInfiniteLoops": true }]
   }
 }
